# h264dvr

./: AUTHORS  COPYING  README  WIN32-BUILD-NOTES  config.h.in  configure  configure.ac
include/: DiskWriter.h  Makefile.am  daemonize.h  index_type.h  recd.h  recd_capture.h
lib/: DiskWriter.cpp  Makefile.am  daemonize.cpp  recd_capture.cpp
src/: Makefile.am  hello.cpp  recd.cpp
